[gd_scene load_steps=6 format=2]

[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_1/scr_obj_Rain.gd" type="Script" id=2]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_rainD.ogg" type="AudioStream" id=3]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_rain01.ogg" type="AudioStream" id=4]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_04_badabloing.wav" type="AudioStream" id=5]

[node name="obj_Rain" instance=ExtResource( 1 )]
script = ExtResource( 2 )
default_noise = ""
distorted_noise_player_active = true

[node name="sfx2D_object" parent="." index="1"]
stream = ExtResource( 4 )
volume_db = -4.0

[node name="sfx2D_distorted" parent="." index="2"]
stream = ExtResource( 3 )
volume_db = 6.0
pitch_scale = 0.8

[node name="sfx_discovered" parent="." index="3"]
stream = ExtResource( 5 )
pitch_scale = 0.5

[node name="AnimatedSprite" parent="." index="5"]
modulate = Color( 0.717647, 0.298039, 0.423529, 1 )
animation = "rain"
frame = 3
playing = true
